--- a/MainHub.html
+++ b/MainHub.html
@@ -9,64 +9,15 @@
 
 
 <ul class = "navigation">
-  <li class = "list-item"><a class="nav-bar" href="ToDoList.html">To-Do List.</a></li>
-  <li  class = "list-item"><a  class="nav-bar"href="Calendar.html">Calendar</a></li>
+  <li class = "list-item"><a class="nav-bar" href="ToDoListAndCalendar.html">To-Do List.</a></li>
   <li  class = "list-item"><a class="nav-bar" href="#contact">Expenses</a></li>
 </ul>
 
 
 <button onclick="DarkMode()">Toggle dark mode</button>
 
-<style>
-#Header{
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  
-}
-
-.center{
-  text-align: center;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.navigation{
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-.list-item{
-  float: center;
-}
-
-.nav-bar{
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-}
-
-.nav-bar:hover{
-  background-color: greenyellow;
-  color:black;
-}
-
-.dark-mode {
-  background-color: #36393e;
-  color: white;
-}
 
 
-
-
-
-
-
-
-</style>
 
 <script>
 
