--- a/ToDoListAndCalendar.html
+++ b/ToDoListAndCalendar.html
@@ -13,7 +13,6 @@
 <h1 class = "center" id = "Header">To-Do List Page</h1>  
 <ul class = "navigation">
   <li class = "list-item"><a class="nav-bar" href="MainHub.html">Back To Hub</a></li>
-  <li  class = "list-item"><a  class="nav-bar"href="Calendar.html">Calendar</a></li>
   <li  class = "list-item"><a class="nav-bar" href="#contact">Expenses</a></li>
 </ul>
 
@@ -24,6 +23,51 @@
   <a href="#">To-Do List</a>
   
   <button onclick="DarkMode()" class ="button-66">Toggle dark mode</button>
+
+  <div id="myNav" class="overlay">
+    <h1 id = "CalendarHeading">Calendar</h1>
+    <p class = "CalendarParagraph">Use the arrow on the far left to change the year</p>
+    <br>
+    <p class = "CalendarParagraph">Click on the month to change the month</p>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="overlay-content">  
+    <div class = "light">  
+      <div class="calendar">
+        <div class="calendar-header">
+            <span class="month-picker" id="month-picker">April</span>
+            <div class="year-picker">
+                <span class="year-change" id="prev-year">
+                    <pre></pre>
+                </span>
+                <span id="year">2022</span>
+                <span class="year-change" id="next-year">
+                    <pre>></pre>
+                </span>
+            </div>
+        </div>
+        <div class="calendar-body">
+            <div class="calendar-week-day">
+                <div>Sun</div>
+                <div>Mon</div>
+                <div>Tue</div>
+                <div>Wed</div>
+                <div>Thu</div>
+                <div>Fri</div>
+                <div>Sat</div>
+            </div>
+            <div class="calendar-days"></div>
+        </div>
+       
+        <div class="month-list"></div>
+
+      </div>
+    </div>
+    </div>
+  </div>
+
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()" id = "openCalendar">&#9776; Calendar</span>
+  
+
 </div>
 
 
@@ -45,12 +89,6 @@
  <h1 class = "PageHeadings">Sticky Notes<h1>
 
 <ul class = "stickyNoteUL">
-  <li>
-    <a href="#">
-      <h2 class = stickyNoteHeading>Title #1</h2>
-      <p class = "stickyNoteText">Text Content #1</p>
-    </a>
-  </li>
   <li>
     <a href="#">
       <h2 class = stickyNoteHeading>Title #2</h2>
@@ -90,8 +128,8 @@
 
 
 
-<script src = "ToDoList.js"></script>
-<link rel="stylesheet" href="ToDoList.css">
+<script src = "ProductivityTracker.js"></script>
+<link rel="stylesheet" href="ProductivityTracker.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 
