--- a/MainHub.html
+++ b/MainHub.html
@@ -16,12 +16,7 @@
 
 <button onclick="DarkMode()">Toggle dark mode</button>
 
-
-
-
-<script>
-
-
-</script>
+<script src = "ProductivityTracker.js"></script>
+<link rel="stylesheet" href="ProductivityTracker.css">
 </body>
 </html>
