--- a/ExpenseTracker.html
+++ b/ExpenseTracker.html
@@ -10,7 +10,7 @@
     <title>Expense Tracker App</title>
 </head>
 <body>
-    <h1>Expense Tracker App</h1>
+    <h1>Expense Tracker</h1>
   <ul class = "navigation">
     <li class = "list-item"><a class="nav-bar" href="ToDoListAndCalendar.html">To-Do List.</a></li>
     <li  class = "list-item"><a class="nav-bar" href="ExpenseTracker.html">Expenses</a></li>
