--- a/ToDoListAndCalendar.html
+++ b/ToDoListAndCalendar.html
@@ -21,7 +21,7 @@
 <div class = "sidenav">
   <a href="#">Back To Top</a>
   <a href="#">Sticky Notes</a>
-  <a href="#">To-Do List</a>
+  <a href="#" onClick="document.getElementById('middle').scrollIntoView();">To-Do List</a>
   
   <button onclick="DarkMode()" class ="button-66">Toggle dark mode  <i class="fa fa-moon-o"  style="font-size:30px; margin-left: 5px; " ></i></button>
 
@@ -102,7 +102,7 @@
  
 </ul>
 
-<h1 class = PageHeadings>Standard To-Do List</h1>
+<h1 class = PageHeadings >Standard To-Do List</h1>
 <p class = "center">Type something in the text field and then press the add button to append it to the to-do list.</p>
 <br>
 <p class = "center"> Hover and click the name of the To-Do List to rename it</p>
