--- a/ExpenseTracker.html
+++ b/ExpenseTracker.html
@@ -12,8 +12,8 @@
 <body>
     <h1>Expense Tracker</h1>
   <ul class = "navigation">
-    <li class = "list-item"><a class="nav-bar" href="ToDoListAndCalendar.html">To-Do List.</a></li>
-    <li  class = "list-item"><a class="nav-bar" href="ExpenseTracker.html">Expenses</a></li>
+    <li class = "list-item"><a class="nav-bar" href="MainHub.html">Back To Hub</a></li>
+    <li  class = "list-item"><a class="nav-bar" href="ToDoListAndCalendar.html">To-Do List</a></li>
   </ul>
 
 
