--- a/MainHub.html
+++ b/MainHub.html
@@ -35,7 +35,7 @@
         <br>
         <p>Currently a senior at Cypress Creek Highschool</p>
         <p>Have done Computer Science for 4 years</p>
-        <p>Other Hobbies include, exercising, listening to music, and video games</p>
+        <p>Other Hobbies include, exercising, listening to music, playing Flute, and video games</p>
         <br>
         <p>adityajandhyala8@gmail.com</p>
       
