Pending changes exported from your codespace

--- a/MainHub.html
+++ b/MainHub.html
@@ -28,7 +28,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="MarchingPicture.jpg" alt="Jane" style="width:100%">
+      <img src="MarchingPicture.jpg" alt="Aditya Jandhyala" style="width:100%">
       <div class="container">
         <h2>Aditya Jandhyala</h2>
         <p class="title">Creator</p>
