--- a/ExpenseTracker.html
+++ b/ExpenseTracker.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ExpenseTracker.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Expense Tracker App</title>
 </head>
@@ -16,7 +17,13 @@
     <li  class = "list-item"><a class="nav-bar" href="ToDoListAndCalendar.html">To-Do List</a></li>
   </ul>
 
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">Expense Tracker</a>
+    <button onclick="DarkMode()" class ="button-66">Toggle dark mode  <i class="fa fa-moon-o"  style="font-size:30px; margin-left: 5px; " ></i></button>
 
+  </div>
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
    
     <div class="input-section">
         <label for="category-select">Category:</label>
